fix margin on small screens, wrap colour blocks

--- a/styleguide.css
+++ b/styleguide.css
@@ -2,6 +2,7 @@ body {
   position: relative;
   background: white;
   max-width: 800px;
+  padding: 1rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -54,6 +55,7 @@ p {
 .row {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .colour {
@@ -66,6 +68,8 @@ p {
   font-variant: small-caps;
   font-weight: 900;
   border: 1px solid transparent;
+  margin: 0.5rem;
+  flex: 1 0 128px;
 }
 
 .black {
